Fix extra padding.

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -111,7 +111,7 @@ body, h1, h2, h3, h4, h5, h6, td
 
 #info
   background: url(/images/bg-brown.jpg)
-  margin: 20px 0
+  margin: 20px 0 0 0
   overflow: hidden
   position: relative
   color: #eee
